--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
 
         {% if site.show_downloads %}
           <ul>
-            <li><a href="http://socialstats.haziqj.ml/soc-stat-meet-bgtvi-handout.pdf">Download <strong>PDF Slides</strong></a></li>
-            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP Source</strong></a></li>
-            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+            <li><a href="http://socialstats.haziqj.ml/soc-stat-meet-bgtvi-handout.pdf">Download PDF Slides</a></li>
+            <li><a href="{{ site.github.zip_url }}">Download ZIP Source</a></li>
+            <li><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
           </ul>
         {% endif %}
       </header>
