--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,19 +17,19 @@
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-<!--         {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %} -->
+        {% if site.github.is_project_page %}
+          <p class="view"><a href="http://haziqj.ml">Haziq Jamil </a></p>
+        {% endif %}
 
-<!--         {% if site.github.is_user_page %}
+        {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %} -->
+        {% endif %}
 
         {% if site.show_downloads %}
           <ul>
-            <li><a href="http://socialstats.haziqj.ml/soc-stat-meet-bgtvi-handout.pdf">Download PDF Slides</a></li>
-            <li><a href="{{ site.github.zip_url }}">Download ZIP Source</a></li>
-            <li><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+            <li><a href="http://socialstats.haziqj.ml/soc-stat-meet-bgtvi-handout.pdf">Download <strong>PDF Slides</strong></a></li>
+            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP Source</strong></a></li>
+            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
           </ul>
         {% endif %}
       </header>
