--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-          <p class="view"><a href="http://haziqj.ml">Haziq Jamil </a></p>
+          <p class="view">Presented by<a href="http://haziqj.ml"> Haziq Jamil </a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
