--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,11 @@
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p></p>
 
-        {% if site.github.is_project_page %}
-          <p class="view"><a </a></p>
-        {% endif %}
+<!--         {% if site.github.is_project_page %}
+          <p class="view"><a  </a></p>
+        {% endif %} -->
 
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
